프리미어 뷰 페이지 업데이트

--- a/view_premier.html
+++ b/view_premier.html
@@ -573,7 +573,7 @@
         <main class="article-container">
             
             <div class="article-image">
-                <img src="https://images.unsplash.com/photo-1555862115-285685869a23?q=80&w=1000&auto=format&fit=crop" alt="시위 장면" style="min-height:400px; object-fit: cover;">
+                <img src="https://wimg.mk.co.kr/news/cms/202601/15/news-p.v1.20260115.e45b91e1f4e9443cbca43d93adb088c6_P1.jpg" alt="" style="min-height:auto; object-fit: cover;">
                 <div class="img-caption">지난 8일 반정부 시위가 벌어진 이란 테헤란에서 차량이 불타고 있다. /사진=로이터연합뉴스 (예시)</div>
             </div>
 
