--- a/view_premier_mu_size.html
+++ b/view_premier_mu_size.html
@@ -183,7 +183,7 @@
                 [[480, 320], [336, 280], [320, 480], [320, 100], [320, 50], [300, 250], [250, 250], [200, 200], [2, 1], [1, 1], 'fluid'],
                 'BC_byline_rectangle'
             )
-                .defineSizeMapping(sizeMapping_horizontal)
+                .defineSizeMapping(sizeMapping_article_horizontal)
                 .setTargeting('div_id', 'BC_byline_rectangle')
                 .setTargeting('position', 'BC')
                 .setTargeting('ad_area_type', 'below_byline')
@@ -197,7 +197,7 @@
                 [[480, 320], [336, 280], [320, 480], [300, 250], [250, 250], [200, 200], [320, 100], [320, 50], [2, 1], [1, 1], 'fluid'],
                 'BC_billboard_rectangle'
             )
-                .defineSizeMapping(sizeMapping_horizontal)
+                .defineSizeMapping(sizeMapping_article_horizontal)
                 .setTargeting('div_id', 'BC_billboard_rectangle')
                 .setTargeting('position', 'BC')
                 .setTargeting('ad_area_type', 'below_comments')
