티즈, 패스백 pc 업데인트

--- a/3rd-party-creatives/teads_passback_old_pc.html
+++ b/3rd-party-creatives/teads_passback_old_pc.html
@@ -7,18 +7,17 @@
 </head>
 <body>
 
-    <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js" crossorigin="anonymous"></script>
-
 <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
 <div id="gpt-passback">
   <script>
     window.googletag = window.googletag || {cmd: []};
     googletag.cmd.push(function() {
-    googletag.defineSlot('/7450/m.mk.co.kr/passback/teads', [336, 280], 'gpt-passback').addService(googletag.pubads()).setTargeting('ad_area_type', ['in_a_mobile_article_1']).setTargeting('position', ['MC']);
+    googletag.defineSlot('/7450/www.mk.co.kr/passback/teads', [[970, 250], [970, 251], [980, 120], [970, 90], [930, 180], [700, 525], [750, 300], [750, 200], [480, 320], [728, 90], 'fluid'], 'gpt-passback').addService(googletag.pubads()).setTargeting('ad_area_type', ['']).setTargeting('div_id', ['MC_billboard']).setTargeting('position', ['MC']).set("page_url", "URL");
     googletag.enableServices();
     googletag.display('gpt-passback');
     });
   </script>
+</div>
 
 
 </body>
