--- a/HOME.html
+++ b/HOME.html
@@ -418,48 +418,40 @@
                     [1246, 100], [1200, 300], [1200, 100], 
                     [980, 120], [970, 250], [930, 180], [970, 90], 
                     [728, 90], 
-                    [2, 1], [1, 1], 
-                    'fluid'
+                    [2, 1], [1, 1], 'fluid'
                 ])
                 .addSize([768, 0], [
                     [750, 300], [750, 200], [728, 90], 
                     [480, 320], 
                     [336, 280], [320, 480], [300, 250], 
-                    [2, 1], [1, 1], 
-                    'fluid'
+                    [2, 1], [1, 1], 'fluid'
                 ])
                 .addSize([0, 0], [
                     [336, 280], [320, 480],
                     [320, 100], [320, 50], 
                     [300, 250], [250, 250], [200, 200], 
-                    [2, 1], [1, 1], 
-                    'fluid'
+                    [2, 1], [1, 1], 'fluid'
                 ])
                 .build();
 
             // 0-2. 우측 사이드레일 박스형 배너용 사이즈 매핑 (MR)
             const sizeMapping_siderail_square = googletag.sizeMapping()
                 .addSize([1024, 0], [
-                    [336, 280], [320, 480], [300, 600], [300, 250], 
-                    [250, 250], [200, 200],
-                    [2, 1], [1, 1], 
-                    'fluid'
+                    [336, 280], [320, 480], [300, 600], 
+                    [300, 250], [250, 250], [200, 200], 
+                    [2, 1], [1, 1], 'fluid'
                 ])
                 .addSize([768, 0], [
                     [750, 300], [750, 200], [728, 90], 
                     [480, 320], 
                     [336, 280],[320, 480],
-                    [320, 100], [320, 50],
                     [300, 250], [250, 250], [200, 200],
-                    [2, 1], [1, 1], 
-                    'fluid'
+                    [2, 1], [1, 1], 'fluid'
                 ])
                 .addSize([0, 0], [
                     [336, 280], [320, 480],
-                    [320, 100], [320, 50],
                     [300, 250], [250, 250], [200, 200],
-                    [2, 1], [1, 1], 
-                    'fluid'
+                    [2, 1], [1, 1], 'fluid'
                 ])
                 .build();
 
@@ -468,7 +460,13 @@
             // TC_billboard_leaderboard (Eager Load)
             TC_billboard_leaderboard_slot = googletag.defineSlot(
                 AdUnitPath,
-                [[1246, 100], [1200, 300], [1200, 100], [980, 120], [970, 250], [930, 180], [970, 90], [728, 90], [320, 100], [320, 50], [2, 1], [1, 1], 'fluid'],
+                [
+                    [1246, 100], [1200, 300], [1200, 100], 
+                    [980, 120], [970, 250], [930, 180], [970, 90], 
+                    [728, 90], 
+                    [320, 100], [320, 50], 
+                    [2, 1], [1, 1], 'fluid'
+                ],
                 'TC_billboard_leaderboard'
             )
                 .defineSizeMapping(sizeMapping_horizontal) 
@@ -482,7 +480,14 @@
             // MC_billboard_rectangle (Lazy Load)
             MC_billboard_rectangle_slot = googletag.defineSlot(
                 AdUnitPath,
-                [[1246, 100], [1200, 300], [1200, 100], [980, 120], [970, 250], [970, 90], [930, 180], [750, 300], [750, 200], [728, 90], [480, 320], [336, 280], [320, 480], [320, 100], [320, 50], [300, 250], [250, 250], [200, 200], [2, 1], [1, 1], 'fluid'],
+                [
+                    [1246, 100], [1200, 300], [1200, 100], 
+                    [980, 120], [970, 250], [970, 90], [930, 180], 
+                    [750, 300], [750, 200], [728, 90], 
+                    [480, 320], [336, 280], [320, 480], 
+                    [300, 250], [250, 250], [200, 200], 
+                    [2, 1], [1, 1], 'fluid'
+                ],
                 'MC_billboard_rectangle'
             )
                 .defineSizeMapping(sizeMapping_horizontal) 
@@ -497,7 +502,13 @@
             // 💡 [수정 작업 1] 데스크톱일 때는 eager, 그 외(모바일/태블릿)는 lazy로 분기
             MR_halfpage_rectangle_slot = googletag.defineSlot(
                 AdUnitPath,
-                [[750, 300], [750, 200], [728, 90], [480, 320], [336, 280], [320, 480], [320, 100], [320, 50], [300, 600], [300, 250], [250, 250], [200, 200], [2, 1], [1, 1], 'fluid'],
+                [
+                    [750, 300], [750, 200], [728, 90], 
+                    [480, 320], [336, 280], [320, 480], 
+                    [300, 600], [300, 250], 
+                    [250, 250], [200, 200], 
+                    [2, 1], [1, 1], 'fluid'
+                ],
                 'MR_halfpage_rectangle'
             )
                 .defineSizeMapping(sizeMapping_siderail_square) 
