--- a/section.html
+++ b/section.html
@@ -139,48 +139,40 @@
                     [1246, 100], [1200, 300], [1200, 100], 
                     [980, 120], [970, 250], [930, 180], [970, 90], 
                     [728, 90], 
-                    [2, 1], [1, 1], 
-                    'fluid'
+                    [2, 1], [1, 1], 'fluid'
                 ])
                 .addSize([768, 0], [
                     [750, 300], [750, 200], [728, 90], 
                     [480, 320], 
                     [336, 280], [320, 480], [300, 250], 
-                    [2, 1], [1, 1], 
-                    'fluid'
+                    [2, 1], [1, 1], 'fluid'
                 ])
                 .addSize([0, 0], [
-                    [336, 280], [320, 480],
+                    [336, 280], [320, 480], 
                     [320, 100], [320, 50], 
                     [300, 250], [250, 250], [200, 200], 
-                    [2, 1], [1, 1], 
-                    'fluid'
+                    [2, 1], [1, 1], 'fluid'
                 ])
                 .build();
 
             // 0-2. 우측 사이드레일 박스형 배너용 사이즈 매핑 (MR)
             const sizeMapping_siderail_square = googletag.sizeMapping()
                 .addSize([1024, 0], [
-                    [336, 280], [320, 480], [300, 600], [300, 250], 
-                    [250, 250], [200, 200],
-                    [2, 1], [1, 1], 
-                    'fluid'
+                    [336, 280], [320, 480], [300, 600], 
+                    [300, 250], [250, 250], [200, 200], 
+                    [2, 1], [1, 1], 'fluid'
                 ])
                 .addSize([768, 0], [
                     [750, 300], [750, 200], [728, 90], 
                     [480, 320], 
-                    [336, 280],[320, 480],
-                    [320, 100], [320, 50],
-                    [300, 250], [250, 250], [200, 200],
-                    [2, 1], [1, 1], 
-                    'fluid'
+                    [336, 280],[320, 480], 
+                    [300, 250], [250, 250], [200, 200], 
+                    [2, 1], [1, 1], 'fluid'
                 ])
                 .addSize([0, 0], [
-                    [336, 280], [320, 480],
-                    [320, 100], [320, 50],
-                    [300, 250], [250, 250], [200, 200],
-                    [2, 1], [1, 1], 
-                    'fluid'
+                    [336, 280], [320, 480], 
+                    [300, 250], [250, 250], [200, 200], 
+                    [2, 1], [1, 1], 'fluid'
                 ])
                 .build();
 
@@ -188,31 +180,43 @@
 
             // 5-1. TC_billboard_leaderboard (Eager Load)
             TC_billboard_leaderboard_slot = googletag.defineSlot(
-                AdUnitPath,
-                [[1246, 100], [1200, 300], [1200, 100], [980, 120], [970, 250], [930, 180], [970, 90], [728, 90], [320, 100], [320, 50], [2, 1], [1, 1], 'fluid'],
+                AdUnitPath, 
+                [
+                    [1246, 100], [1200, 300], [1200, 100], 
+                    [980, 120], [970, 250], [930, 180], [970, 90], 
+                    [728, 90], 
+                    [320, 100], [320, 50], 
+                    [2, 1], [1, 1], 'fluid'
+                ], 
                 'TC_billboard_leaderboard'
             )
                 .defineSizeMapping(sizeMapping_horizontal) 
                 .setTargeting('div_id', 'TC_billboard_leaderboard')
+                .setTargeting('load_type', 'eager')        // 페이지 진입 즉시 노출
                 .setTargeting('position', 'TC')
                 .setTargeting('ad_area_type', 'ATF')
                 .setTargeting('default_exposure', 'hidden')
-                .setTargeting('load_type', 'eager')        // 페이지 진입과 동시에 노출되는 Eager 슬롯
                 .addService(googletag.pubads());
 
 
             // 5-2. MR_halfpage_rectangle (Hybrid Load)
             // 💡 [수정 작업 1] 데스크톱일 때는 eager, 그 외(모바일/태블릿)는 lazy로 분기
             MR_halfpage_rectangle_slot = googletag.defineSlot(
-                AdUnitPath,
-                [[750, 300], [750, 200], [728, 90], [480, 320], [336, 280], [320, 480], [320, 100], [320, 50], [300, 600], [300, 250], [250, 250], [200, 200], [2, 1], [1, 1], 'fluid'],
+                AdUnitPath, 
+                [
+                    [750, 300], [750, 200], [728, 90], 
+                    [480, 320], [336, 280], [320, 480], 
+                    [300, 600], [300, 250], 
+                    [250, 250], [200, 200], 
+                    [2, 1], [1, 1], 'fluid'
+                ], 
                 'MR_halfpage_rectangle'
             )
                 .defineSizeMapping(sizeMapping_siderail_square) 
                 .setTargeting('div_id', 'MR_halfpage_rectangle')
                 .setTargeting('position', 'MR')
                 .setTargeting('ad_area_type', 'ATF')
-                .setTargeting('default_exposure', '')               
+                .setTargeting('default_exposure', '')              
                 // 💡 load_type 분기 처리: desktop -> eager, others -> lazy
                 .setTargeting('load_type', deviceCategory === 'desktop' ? 'eager' : 'lazy') 
                 .addService(googletag.pubads());
