타불라 위젯 수정

--- a/3rd-party-creatives/taboola_4x3_premier.html
+++ b/3rd-party-creatives/taboola_4x3_premier.html
@@ -42,7 +42,7 @@
             transition: background-color 0.3s, color 0.3s;
         }
 
-        /* [4. Container & Layout] - 요청하신 최대 폭 900px 제한 */
+        /* [4. Container & Layout] - 최대 폭 900px 제한 */
         .mk-recommend-widget {
             max-width: 900px; 
             margin: 40px auto;
